--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/src/assets/images/logo-minor.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Minorart</title>
+    <link rel="stylesheet" type="text/css" href="/loader.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Minorart</title>
-  <link rel="stylesheet" type="text/css" href="/loader.css" />
-</head>
+  <body>
+    <div id="app">
+      <div id="loading-bg">
+        <div class="circle">
+          <div class="wave"></div>
+        </div>
 
-<body>
-  <div id="app">
-    <div id="loading-bg">
-<div class="circle">
-      <div class="wave"></div>
-    </div>
-
-
-      <!-- <div class="loading-logo">
+        <!-- <div class="loading-logo">
         <img src="./src/assets/images/logo-minor.png" alt="Logo" width="100"/>
 
       </div>
@@ -26,19 +24,26 @@
         <div class="effect-2 effects"></div>
         <div class="effect-3 effects"></div>
       </div> -->
+      </div>
     </div>
-  </div>
-  <script type="module" src="/src/main.ts"></script>
-  <script>
-    const loaderColor = localStorage.getItem('sneat-initial-loader-bg') || '#FFFFFF'
-    const primaryColor = localStorage.getItem('sneat-initial-loader-color') || '#696CFF'
+    <script type="module" src="/src/main.ts"></script>
+    <script>
+      const loaderColor =
+        localStorage.getItem("sneat-initial-loader-bg") || "#FFFFFF";
+      const primaryColor =
+        localStorage.getItem("sneat-initial-loader-color") || "#00C9AD";
 
-    if (loaderColor)
-      document.documentElement.style.setProperty('--initial-loader-bg', loaderColor)
+      if (loaderColor)
+        document.documentElement.style.setProperty(
+          "--initial-loader-bg",
+          loaderColor
+        );
 
-    if (primaryColor)
-      document.documentElement.style.setProperty('--initial-loader-color', primaryColor)
-  </script>
-</body>
-
+      if (primaryColor)
+        document.documentElement.style.setProperty(
+          "--initial-loader-color",
+          primaryColor
+        );
+    </script>
+  </body>
 </html>
